# BANG

./: .gitignore  CvCpp.pptx  README.md
1/: c++first.sln
1/c++first/: c++first.cpp  c++first.vcxproj  c++first.vcxproj.filters
10/gum/: gum.sln
2/: lab02.sln
2/lab02/: lab02.cpp  lab02.vcxproj  lorem.txt
3/ovecky/: main.cpp  ovecky.cpp  ovecky.h  ovecky.sln  ovecky.vcxproj  ovecky.vcxproj.filters  ~AutoRecover.ovecky.vcxproj
4/frekvence_slov/: main.cpp
5/slovnik/: CMakeLists.txt
6/film/: main.cpp
6/preklady/: CMakeLists.txt
7/algo_func_lamb/: algo_func_lamb.sln
7/algoritmy/: algoritmy.sln
8/polymorph/: CMakeLists.txt  polymorph.sln
9/sablony/: sablony.sln
BANG-zapoctak/: hraci_karty.txt  karty.txt  pocet_hracu.txt  postavy.txt  role.txt
BANG-zapoctak/QBang/: QBang.pro  ai.cpp  ai.h  ask.cpp  ask.h  ask.ui  card.cpp  card.h  char_bart.cpp  char_bart.h  char_blackj.cpp  char_blackj.h  char_calamity.cpp  char_calamity.h  char_carlson.cpp  char_carlson.h  char_cringo.cpp  char_cringo.h  char_jesse.cpp  char_jesse.h  char_jourd.cpp  char_jourd.h  char_ketchum.cpp  char_ketchum.h  char_lucky.cpp  char_lucky.h  char_paul.h  char_pedro.cpp  char_pedro.h  char_rose.h  char_slab.cpp  char_slab.h  char_suzy.cpp  char_suzy.h  char_vulture.h  char_willy.h  characters.h  game.cpp  game.h  gametools.cpp  (+10 more)
BANG-zapoctak/bang/: CMakeLists.txt  postavy.txt  poznamky.txt  role.txt
BANG-zapoctak/bang/bang/: CMakeLists.txt  bang.cpp  bang.h  hraci_karty.txt  main.cpp  postavy.txt  role.txt
BANG-zapoctak/bang/bang/game/: blackj.h  card.h  card_dostavnik.cpp  card_dostavnik.h  card_gun.h  card_horse.h  char_bart.h  char_calamity.h  char_carlson.h  char_cringo.h  char_jesse.h  char_jourd.h  char_ketchum.h  char_lucky.h  char_paul.h  char_pedro.h  char_rose.h  char_slab.h  char_suzy.h  char_vulture.h  char_willy.h  game.cpp  game.h  player.cpp  player.h  willy_the_kid.h
BANG-zapoctak/bang/bang/game/characters/: char_bart.h  char_blackj.h  char_calamity.h  char_carlson.h  char_cringo.h  char_jesse.h  char_jourd.h  char_ketchum.cpp  char_ketchum.h  char_lucky.cpp  char_lucky.h  char_paul.h  char_pedro.h  char_rose.h  char_slab.h  char_suzy.h  char_vulture.h  char_willy.h  characters.h
BANG-zapoctak/bang/bang/resources/: postavy.txt
QBang/: QBang.pro  ai.cpp  ai.h  card.cpp  card.h  char_bart.cpp  char_bart.h  char_blackj.cpp  char_blackj.h  char_calamity.cpp  char_calamity.h  char_carlson.cpp  char_carlson.h  char_cringo.cpp  char_cringo.h  char_jesse.cpp  char_jesse.h  char_jourd.cpp  char_jourd.h  char_ketchum.cpp  char_ketchum.h  char_lucky.cpp  char_lucky.h  char_paul.h  char_pedro.cpp  char_pedro.h  char_rose.h  char_slab.h  char_suzy.cpp  char_suzy.h  char_vulture.h  char_willy.h  characters.h  game.cpp  game.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  notaihandle.cpp  notaihandle.h  (+4 more)
QBang/text/: hraci_karty.txt
du1/: macro.cpp
du1/macro_du1/: CMakeLists.txt
du1/macro_du1/macro_du1/: CMakeLists.txt  macro_du1.cpp  macro_du1.h  main.cpp
du2-polysort/: CMakeLists.txt  du2-polysort.sln
du2-polysort/du2-polysort/: CMakeLists.txt  du2-polysort.cpp  du2-polysort.h  du2-polysort.vcxproj  du2-polysort.vcxproj.filters  fajl.txt  main.cpp  test2.txt
filesystem/Stromy/: Stromy.sln
headers/: fstream.txt  iostream.txt  rady.txt  sstream.txt
lab02/lab02/: lab02.cpp
lab03/: main.cpp
testCOMP/: test.sln
testPTR/: testPTR.cpp  testPTR.sln
test_itter/: test_itter.sln
zk/: zk.sln
zk2/: zk2.sln
(+60 files in other folders)
